tests/baselines/reference/errorsOnImportedSymbol(target=es5).errors.txt
errorsOnImportedSymbol_1.ts(2,13): error TS2693: 'Sammy' only refers to a type, but is being used as a value here.
errorsOnImportedSymbol_1.ts(3,9): error TS2693: 'Sammy' only refers to a type, but is being used as a value here.


==== errorsOnImportedSymbol_1.ts (2 errors) ====
    import Sammy = require("./errorsOnImportedSymbol_0");
    var x = new Sammy.Sammy();
                ~~~~~
!!! error TS2693: 'Sammy' only refers to a type, but is being used as a value here.
    var y = Sammy.Sammy(); 
            ~~~~~
!!! error TS2693: 'Sammy' only refers to a type, but is being used as a value here.
    
    
==== errorsOnImportedSymbol_0.ts (0 errors) ====
    interface Sammy {
        new (): any;
        (): number;
    }
    export = Sammy;
    